* Scroll to the bottom once you hit the show all button to prevent tedious scrolling
* Add an API to make ownCloud cron updates optionally. This can be used to write an update script which can be threaded to dramatically speed up fetching of feeds and reduce the used memory to run the update
* Add a Python update script which threads the updates
* Make it possible to turn off cron updates

ownCloud-news (1.202)
* Fixed a bug in the API routes that would request an uneeded id when creating a feed
* Log unimportant errors on debug level instead of error level

ownCloud-news (1.201)
* Add shortcut 'o' which opens the current article in a new tab
* Speed up updating of feeds by more than 100% by not fetching favicons and unneeded https/http variants
* Moved to new RESTful API to fix API bugs
* Fix bug that wouldnt mark items as read if they were set read in a folder, feed or all read request
* Style blockquotes
* Fixed small CSS bug that would remove the bottom margin of every last element
* Increased allowed feed timeout from 10 to 60 seconds
* Make it possible for plugins to turn off mark read on scroll
* Removed HTML Purifier unit tests which made it possible to trigger XSS using a crafted URL
* Don't update existing articles anymore if the pubdate changes to prevent weird update behaviour
* If articles dont provide a pubdate, use the date when the article was saved in the database
* Display download link if audio file is not playable

ownCloud-news (1.001)
* Also use monospace for pre tag
* Fix bug that would prevent feed updates when feeds or folders are deleted

ownCloud-news (0.104)
* Also html decode the links to the page to not break on nyaa torrents

ownCloud-news (0.103)
* Fixed a bug that prevented deleting feeds when a folder was deleted

ownCloud-news (0.102)
* Fix marking read of all articles and folders on mysql and postgres
* Fix bug that would still show items after its feed or folder has been marked as deleted